Document moduleJvmArgs extension